--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon.png">
-    <title>TITLE</title>
+    <title>mini-sc</title>
 </head>
 
 <body>
