add form and pali toggle

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 </head>
 
 <body>
+    <form id="form">
+        <input id="citation" type="text" placeholder="Enter citation">
+    </form>
     <div id="sutta">
         <div class="instructions">
             <p>Put a citation following the url, preceded by a "?" mark. For example:</p>
