fix form submit

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <form id="form">
-        <input id="citation" type="text" placeholder="Enter citation">
+        <input id="citation" type="text" placeholder="Enter citation"><input class="go-button" type="submit" value="Go">
     </form>
     <div id="sutta">
         <div class="instructions">
