add new favicon

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon.png">
-    <title>mini-sc</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon.png">
+    <title>SC Light</title>
 </head>
 
 <body>
