add previous next

--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
         </div>
     </form>
     <div id="sutta">
-
+    </div>
+    <hr>
+    <div id="navigation">
+        <div id="previous"></div>
+        <div id="next"></div>
     </div>
     <div class="links-area" style="text-align: center;">
         <a href="http://readingfaithfully.org" title="Support for your sutta readng practice" rel="noreferrer"
