add sharing image

--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <link rel="stylesheet" href="index.css">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon.png">
     <title>SC Light</title>
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="SuttaCentral Light | ReadingFaithfully" />
+    <meta property="og:description" content="An ultra lightweight interface for SuttaCentral." />
+    <meta property="og:url" content="https://sc.readingfaithfully.org/" />
+    <meta property="og:site_name" content="SC.ReadingFaithfully.org" />
+    <meta property="og:image" itemprop="image"
+        content="https://sc.readingfaithfully.org/images/featuredImage-sc-light-favicon.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="SC.ReadingFaithfully.org" />
+    <meta name="twitter:creator" content="ReadingFaithfully.org" />
 </head>
 
 <body>
