--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <a href="https://dppn.readingfaithfully.org" title="A lightweight interface the Dictionary of Pali Proper Names"
             rel="noreferrer" target="_blank"><img width="20px" src="./images/favicon-dppn-black.png"
                 alt="DPPN search icon"></a>
-        <a href="https://github.com/thesunshade/ped-interface" title="The source code for this site" rel="noreferrer"
+        <a href="https://github.com/thesunshade/mini-sc#readme" title="The source code for this site" rel="noreferrer"
             target="_blank"><img width="20px" src="./images/GitHub-Mark-64px-black.png" alt="GitHub icon"></a>
     </div>
     <script type="module" src="index.js"></script>
