add google code

--- a/index.html
+++ b/index.html
@@ -66,6 +66,13 @@
             target="_blank"><img width="20px" src="./images/GitHub-Mark-64px-black.png" alt="GitHub icon"></a>
     </div>
     <script type="module" src="index.js"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-120551088-1');
+    </script>
 </body>
 
 </html>
