--- a/index.html
+++ b/index.html
@@ -21,13 +21,12 @@
     <meta name="twitter:creator" content="ReadingFaithfully.org" />
 </head>
 
-<body>
+<body class="dark">
     <form id="form">
         <input id="citation" type="text" placeholder="Enter citation"><input class="go-button" type="submit" value="Go">
-        <div id="home-button" class="home-button">
+        <div id="home-button" class="icon-button">
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="body_1" width="20"
                 height="15">
-
                 <g transform="matrix(0.13384491 0 0 0.13384491 1.7765683 -0)">
                     <g>
                         <path
@@ -35,6 +34,13 @@
                             stroke="none" fill="#989898" fill-rule="nonzero" />
                     </g>
                 </g>
+            </svg>
+        </div>
+        <div id="theme-button" class="icon-button">
+            <svg xmlns="http://www.w3.org/2000/svg" height="14" viewBox="0 0 24 24">
+                <path
+                    d="M0 12c0 6.627 5.373 12 12 12s12-5.373 12-12-5.373-12-12-12-12 5.373-12 12zm2 0c0-5.514 4.486-10 10-10v20c-5.514 0-10-4.486-10-10z"
+                    fill="#989898" />
             </svg>
         </div>
     </form>
